# SeekThermalSDK

./: CHANGELOG.html  README.html
aarch32-linux-gnu/include/seekcamera/: seekcamera.h  seekcamera_version.h
aarch32-linux-gnu/lib/: libseekcamera.so.4.2
aarch64-linux-gnu/examples/: CMakeLists.txt
aarch64-linux-gnu/examples/seekcamera-probe/: CMakeLists.txt
aarch64-linux-musl/conf/: seekspi.conf
aarch64-linux-musl/include/seekcamera/: seekcamera_error.h
aarch64-linux-musl/lib/: libseekcamera.so.4.2
armv6zk-vfpv2-linux-gnueabihf/examples/seekcamera-fsc/src/: seekcamera-fsc.c
armv6zk-vfpv2-linux-gnueabihf/examples/seekcamera-fw-update/: README.md
armv7a-linux-gnueabi/examples/seekcamera-fsc/: README.md
armv7a-linux-musleabi/examples/seekcamera-fsc/: CMakeLists.txt
armv7a-linux-musleabi/examples/seekcamera-simple/: README.md
armv7a-linux-musleabi/include/seekcamera/: seekcamera_frame.h
armv7a-linux-musleabi/lib/: libseekcamera.so.4.2
armv7a-neon-vfpv4-linux-gnueabi/include/seekframe/: seekframe.h
armv7a-neon-vfpv4-linux-gnueabi/lib/: libseekcamera.so.4.2
armv7a-neon-vfpv4-linux-gnueabihf/examples/seekcamera-sdl/: CMakeLists.txt
armv7a-neon-vfpv4-linux-musleabi/examples/seekcamera-probe/src/: seekcamera-probe.cpp
armv7a-neon-vfpv4-linux-musleabi/examples/seekcamera-sdl/: README.md
armv7a-neon-vfpv4-linux-musleabi/examples/seekcamera-sdl/src/: seekcamera-sdl.cpp
armv7a-neon-vfpv4-linux-musleabi/examples/seekcamera-simple/: CMakeLists.txt
armv7a-neon-vfpv4-linux-musleabi/include/seekcamera/: seekcamera_manager.h
armv7a-neon-vfpv4-linux-musleabi/lib/: libseekcamera.so.4.2
armv7a-neon-vfpv4-linux-musleabihf/: CREDITS.txt
armv7a-neon-vfpv4-linux-musleabihf/examples/seekcamera-fw-update/src/: seekcamera-fw-update.c
armv7a-neon-vfpv4-linux-musleabihf/lib/: libseekcamera.so.4.2
x64-windows/driver/: seekusb.cat  seekusb.inf
x64-windows/examples/seekcamera-simple/src/: seekcamera-simple.c
x86_64-linux-gnu/: LICENSE.txt
x86_64-linux-gnu/examples/seekcamera-fw-update/: CMakeLists.txt
x86_64-linux-gnu/examples/seekcamera-probe/: README.md
x86_64-linux-gnu/lib/: libseekcamera.so.4.2
